fix: fix flex wrap of projects cards

--- a/assets/css/Main.css
+++ b/assets/css/Main.css
@@ -53,12 +53,13 @@ a {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 #project-tile {
     background-color: hsl(216, 33%, 97%);
     padding: 10px;
-    margin-top: 20px;
+    margin: 20px 20px;
     border-radius: 5px 5px 0px 0px;
     box-shadow: 0px 0px 3px 3px hsl(210, 16%, 82%);
     transition: box-shadow 0.5s ease-in-out;
